decharger changed pos

--- a/1_Preprocessing.ipynb
+++ b/1_Preprocessing.ipynb
@@ -159,6 +159,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c238c6d4",
+   "metadata": {},
+   "source": [
+    "#### `5) Metabolite adduct decharger` \n",
+    "\n",
+    "For each peak, this algorithm reconstructs neutral masses by enumerating all possible adducts with matching charge. You can add the list of adduct files and database files for the algorithm to parse through.\n",
+    "With SIRIUS, an algorithm that is later used, you are only able to use singly charged adducts so charges higher than 1 are filtered out. \n",
+    "\n",
+    "###### Documentation: https://abibuilder.informatik.uni-tuebingen.de/archive/openms/Documentation/nightly/html/UTILS_MetaboliteAdductDecharger.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7b538e65",
@@ -175,6 +188,7 @@
     "input_mzml_files = glob.glob('results/interim/mzML/PCpeak_*.mzML')\n",
     "\n",
     "# 2) Mass trace detection\n",
+    "\n",
     "feature_maps_FFM= []\n",
     "for filename in input_mzml_files:\n",
     "    exp = MSExperiment()\n",
@@ -188,7 +202,7 @@
     "    mtd.setParameters(mtd_par)\n",
     "    mtd.run(exp, mass_traces, 0)\n",
     "\n",
-    "# 3) Elution peak detection\n",
+    "# 3) Elution peak detection (deconvolution)\n",
     "\n",
     "    mass_traces_split = []\n",
     "    mass_traces_final = []\n",
@@ -203,7 +217,7 @@
     "    else:\n",
     "          mass_traces_final = mass_traces_split\n",
     "\n",
-    "# 4) Feature finding metabo\n",
+    "# 4) Feature finding metabo (isotope reduction)\n",
     "  \n",
     "    feature_map_FFM = FeatureMap()\n",
     "    feat_chrom = []\n",
@@ -230,8 +244,52 @@
     "\n",
     "    feature_maps_FFM.append(feature_map_FFM)\n",
     "\n",
-    "    featurefile = os.path.join(path, 'FFM_' + os.path.basename(filename)[7:-5] +\".featureXML\")\n",
-    "    FeatureXMLFile().store(featurefile, feature_map_FFM)"
+    "# 5) Adduct annotation\n",
+    "\n",
+    "    mfd = MetaboliteFeatureDeconvolution()\n",
+    "    mdf_par = mfd.getDefaults()\n",
+    "    mdf_par.setValue(\"potential_adducts\", [b\"H:+:0.4\",b\"Na:+:0.2\",b\"NH4:+:0.2\", b\"H-1O-1:+:0.1\", b\"H-3O-2:+:0.1\"])\n",
+    "    mdf_par.setValue(\"charge_min\", 1, \"Minimal possible charge\")\n",
+    "    mdf_par.setValue(\"charge_max\", 1, \"Maximal possible charge\")\n",
+    "    mdf_par.setValue(\"charge_span_max\", 1)\n",
+    "    mdf_par.setValue(\"max_neutrals\", 1)\n",
+    "    mfd.setParameters(mdf_par)\n",
+    "        \n",
+    "    feature_map_MFD = FeatureMap()\n",
+    "    cons_map0 = ConsensusMap()\n",
+    "    cons_map1 = ConsensusMap()\n",
+    "    mfd.compute(feature_map_FFM, feature_map_MFD, cons_map0, cons_map1)\n",
+    "    consensusfile = os.path.join(path, 'MFD_' + os.path.basename(filename)[7:-5] +\".consensusXML\")\n",
+    "    ConsensusXMLFile().store(consensusfile, cons_map0)\n",
+    "    featurefile = os.path.join(path, 'MFD_' + os.path.basename(filename)[7:-5] +\".featureXML\")\n",
+    "    FeatureXMLFile().store(featurefile, feature_map_MFD)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41ddd154",
+   "metadata": {},
+   "source": [
+    "Display the features in a dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33b01270",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_feature_files = sorted(glob.glob('results/interim/preprocess/MFD_*.featureXML'))\n",
+    "\n",
+    "for filename in input_feature_files:\n",
+    "    fmap = FeatureMap()\n",
+    "    FeatureXMLFile().load(filename, fmap)\n",
+    "    DF= fmap.get_df(export_peptide_identifications=False)\n",
+    "    feature_csv= os.path.join(\"results\", \"features\", 'features_' + os.path.basename(filename)[4:-10] +\"csv\")\n",
+    "    DF.to_csv(feature_csv)\n",
+    "print(\"example:\", os.path.basename(filename))\n",
+    "display(DF)"
    ]
   },
   {
@@ -239,7 +297,7 @@
    "id": "a4ffec84",
    "metadata": {},
    "source": [
-    "#### `5) PrecursorCorrection (To the \"nearest feature”)`\n",
+    "#### `6) PrecursorCorrection (To the \"nearest feature”)`\n",
     "\n",
     "This algorithm is used after feature detection and adduct grouping to allow for precursor correction on MS2 level. \n",
     "\n",
@@ -258,7 +316,7 @@
     "path = os.path.join(\"results\", \"interim\", \"mzML\")\n",
     "\n",
     "input_mzml_files = sorted(glob.glob('results/interim/mzML/PCpeak_*.mzML'))\n",
-    "input_feature_files = sorted(glob.glob('results/interim/preprocess/*.featureXML'))\n",
+    "input_feature_files = sorted(glob.glob('results/interim/preprocess/MFD_*.featureXML'))\n",
     "\n",
     "for mzml in input_mzml_files:\n",
     "    exp = MSExperiment()\n",
@@ -267,10 +325,10 @@
     "    correct = PrecursorCorrection()\n",
     "\n",
     "    for filename in input_feature_files:\n",
-    "        feature_map_FFM = FeatureMap()\n",
-    "        FeatureXMLFile().load(filename, feature_map_FFM)\n",
+    "        feature_map_MFD = FeatureMap()\n",
+    "        FeatureXMLFile().load(filename, feature_map_MFD)\n",
     "        if os.path.basename(mzml)[7:-5] == os.path.basename(filename)[4:-11]:\n",
-    "            correct.correctToNearestFeature(feature_map_FFM, exp, 0.0, 100.0, True, False, False, False, 3, 0)\n",
+    "            correct.correctToNearestFeature(feature_map_MFD, exp, 0.0, 100.0, True, False, False, False, 3, 0)\n",
     "            corrected_file = os.path.join(path, 'PCfeature_' + os.path.basename(mzml)[7:])\n",
     "            MzMLFile().store(corrected_file, exp)"
    ]
@@ -280,7 +338,7 @@
    "id": "f1160110",
    "metadata": {},
    "source": [
-    "#### `6) MapAlignerPoseClustering `\n",
+    "#### `7) MapAlignerPoseClustering `\n",
     "This algorithm is used to perform a linear retention time alignment, in order to correct for chromatographic shifts in retention time. The reference file used for Map Alignment is the feature map with the highest number of features.\n",
     "\n",
     "###### Documentation: https://abibuilder.informatik.uni-tuebingen.de/archive/openms/Documentation/release/latest/html/TOPP_MapAlignerPoseClustering.html"
@@ -295,7 +353,7 @@
    "source": [
     "path = os.path.join(\"results\", \"interim\", \"preprocess\")\n",
     "\n",
-    "input_feature_files = sorted(glob.glob('results/interim/preprocess/*.featureXML'))\n",
+    "input_feature_files = sorted(glob.glob('results/interim/preprocess/MFD_*.featureXML'))\n",
     "feature_maps=[]\n",
     "for filename in input_feature_files:\n",
     "    feature_map_MFD = FeatureMap()\n",
@@ -394,47 +452,6 @@
     "fig.tight_layout()\n",
     "#fig.legend([fmap.getDataProcessing()[0].getMetaValue('parameter: out')[:-11] for fmap in feature_maps], loc = 'lower center')\n",
     "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a4ffec84",
-   "metadata": {},
-   "source": [
-    "#### `7) PrecursorCorrection (To the \"nearest feature”)`\n",
-    "\n",
-    "This algorithm is used after feature detection and adduct grouping to allow for precursor correction on MS2 level. \n",
-    "\n",
-    "If there are MS2 spectra in the feature space which have been measured in isotope traces, it “corrects” the MS2 spectrum annotation to the monoisotopic trace. \n",
-    "\n",
-    "###### Documentation: https://abibuilder.informatik.uni-tuebingen.de/archive/openms/Documentation/nightly/html/classOpenMS_1_1PrecursorCorrection.html"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b57e304e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path = os.path.join(\"results\", \"interim\", \"mzML\")\n",
-    "\n",
-    "input_mzml_files = sorted(glob.glob('results/interim/mzML/PCpeak_*.mzML'))\n",
-    "input_feature_files = sorted(glob.glob('results/interim/preprocess/*.featureXML'))\n",
-    "\n",
-    "for mzml in input_mzml_files:\n",
-    "    exp = MSExperiment()\n",
-    "    MzMLFile().load(mzml, exp)\n",
-    "    exp.sortSpectra(True)\n",
-    "    correct = PrecursorCorrection()\n",
-    "\n",
-    "    for filename in input_feature_files:\n",
-    "        feature_map_MFD = FeatureMap()\n",
-    "        FeatureXMLFile().load(filename, feature_map_MFD)\n",
-    "        if os.path.basename(mzml)[7:-5] == os.path.basename(filename)[4:-11]:\n",
-    "            correct.correctToNearestFeature(feature_map_MFD, exp, 0.0, 100.0, True, False, False, False, 3, 0)\n",
-    "            corrected_file = os.path.join(path, 'PCfeature_' + os.path.basename(mzml)[7:])\n",
-    "            MzMLFile().store(corrected_file, exp)"
    ]
   },
   {
@@ -937,7 +954,7 @@
    "id": "86fda41a",
    "metadata": {},
    "source": [
-    "#### `8) MapAlignmentTransformer`\n",
+    "#### `9) MapAlignmentTransformer`\n",
     "This algorithm is used to perform a linear retention time alignment, in order to correct for chromatographic shifts in retention time. Use the trafo XML files from the feature alignment and align the raw spectra.\n",
     "\n",
     "###### Documentation: https://abibuilder.informatik.uni-tuebingen.de/archive/openms/Documentation/nightly/html/classOpenMS_1_1MapAlignmentTransformer.html"
@@ -978,7 +995,7 @@
    "id": "35c1520f",
    "metadata": {},
    "source": [
-    "#### `9) FeatureFinderMetaboIdent`\n",
+    "#### `10) FeatureFinderMetaboIdent`\n",
     "This algorithm detects and extracts MS1 data that match the feature list in the metabolite identification table.\n",
     "\n",
     "###### Documentation: https://abibuilder.informatik.uni-tuebingen.de/archive/openms/Documentation/nightly/html/UTILS_FeatureFinderMetaboIdent.html"
@@ -1072,6 +1089,7 @@
    "outputs": [],
    "source": [
     "input_mzml_files=sorted(glob.glob(\"results/interim/Requant/*.mzML\"))\n",
+    "path = \"results/interim/Requant\"\n",
     "# load ms data from mzML file into MSExperiment\n",
     "for mzml_file in input_mzml_files:\n",
     "    spectra = MSExperiment()\n",
@@ -1132,68 +1150,65 @@
   },
   {
    "cell_type": "markdown",
-   "id": "166d7564",
+   "id": "cb01c5d9",
    "metadata": {},
    "source": [
-    "#### `8) Metabolite adduct decharger` \n",
+    "#### `11) FeatureGroupingAlgorithmKD `\n",
     "\n",
-    "For each peak, this algorithm reconstructs neutral masses by enumerating all possible adducts with matching charge. You can add the list of adduct files and database files for the algorithm to parse through.\n",
-    "With SIRIUS, an algorithm that is later used, you are only able to use singly charged adducts so charges higher than 1 are filtered out. \n",
+    "Feature linker clusters the feature information (from single files) into a ConsensusFeature, linking features from different files together, which have a smiliar m/z and rt (no MS2 data).\n",
     "\n",
-    "###### Documentation: https://abibuilder.informatik.uni-tuebingen.de/archive/openms/Documentation/nightly/html/UTILS_MetaboliteAdductDecharger.html"
+    "###### Documentation: https://abibuilder.informatik.uni-tuebingen.de/archive/openms/Documentation/release/latest/html/TOPP_FeatureLinkerUnlabeledKD.html"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b410b814",
+   "id": "3c30b864",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mfd = MetaboliteFeatureDeconvolution()\n",
-    "mdf_par = mfd.getDefaults()\n",
-    "mdf_par.setValue(\"potential_adducts\", [b\"H:+:0.4\",b\"Na:+:0.2\",b\"NH4:+:0.2\", b\"H-1O-1:+:0.1\", b\"H-3O-2:+:0.1\"])\n",
-    "mdf_par.setValue(\"charge_min\", 1, \"Minimal possible charge\")\n",
-    "mdf_par.setValue(\"charge_max\", 1, \"Maximal possible charge\")\n",
-    "mdf_par.setValue(\"charge_span_max\", 1)\n",
-    "mdf_par.setValue(\"max_neutrals\", 1)\n",
-    "mfd.setParameters(mdf_par)\n",
-    "    \n",
-    "feature_map_MFD = FeatureMap()\n",
-    "cons_map0 = ConsensusMap()\n",
-    "cons_map1 = ConsensusMap()\n",
-    "mfd.compute(feature_map_FFM, feature_map_MFD, cons_map0, cons_map1)\n",
-    "consensusfile = os.path.join(path, 'MFD_' + os.path.basename(filename)[7:-5] +\".consensusXML\")\n",
-    "ConsensusXMLFile().store(consensusfile, cons_map0)\n",
-    "featurefile = os.path.join(path, 'MFD_' + os.path.basename(filename)[7:-5] +\".featureXML\")\n",
-    "FeatureXMLFile().store(featurefile, feature_map_MFD)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "41ddd154",
-   "metadata": {},
-   "source": [
-    "Display the features in a dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33b01270",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_feature_files = sorted(glob.glob('results/interim/preprocess/MFD_*.featureXML'))\n",
+    "input_feature_files = sorted(glob.glob('results/interim/Requant/FFMID_*.featureXML'))\n",
     "\n",
-    "for filename in input_feature_files:\n",
+    "feature_maps = []\n",
+    "for featurexml_file in input_feature_files:\n",
     "    fmap = FeatureMap()\n",
-    "    FeatureXMLFile().load(filename, fmap)\n",
-    "    DF= fmap.get_df(export_peptide_identifications=False)\n",
-    "    feature_csv= os.path.join(\"results\", \"features\", 'features_' + os.path.basename(filename)[4:-10] +\"csv\")\n",
-    "    DF.to_csv(feature_csv)\n",
-    "print(\"example:\", os.path.basename(filename))\n",
-    "display(DF)"
+    "    FeatureXMLFile().load(featurexml_file, fmap)\n",
+    "    feature_maps.append(fmap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3034793e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_grouper = FeatureGroupingAlgorithmKD()\n",
+    "\n",
+    "consensus_map = ConsensusMap()\n",
+    "file_descriptions = consensus_map.getColumnHeaders()\n",
+    "\n",
+    "for i, feature_map in enumerate(feature_maps):\n",
+    "    file_description = file_descriptions.get(i, ColumnHeader())\n",
+    "    file_description.filename = os.path.basename(feature_map.getMetaValue('spectra_data')[0].decode())[7:]\n",
+    "    file_description.size = feature_map.size()\n",
+    "    file_descriptions[i] = file_description\n",
+    "\n",
+    "feature_grouper.group(feature_maps, consensus_map)\n",
+    "consensus_map.setColumnHeaders(file_descriptions)\n",
+    "\n",
+    "\n",
+    "Consensus_file= os.path.join(path, 'consensus' + \".consensusXML\")\n",
+    "ConsensusXMLFile().store(Consensus_file, consensus_map)\n",
+    "\n",
+    "\n",
+    "# get intensities as a DataFrame\n",
+    "result = consensus_map.get_df()\n",
+    "result= result.reset_index()\n",
+    "result= result.drop(columns= [\"sequence\"])\n",
+    "# store as tsv file\n",
+    "result.to_csv('results/Requant/FeatureMatrix.tsv', sep = '\\t', index = False)\n",
+    "result"
    ]
   }
  ],
