--- a/3_GNPSExport.ipynb
+++ b/3_GNPSExport.ipynb
@@ -26,6 +26,7 @@
     "import glob\n",
     "import sys\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "sys.path.insert(0, '/Users/eeko/openms-develop/openms_build/pyOpenMS')\n",
     "from pyopenms import *"
    ]
