--- a/2_SIRIUS_CSI.ipynb
+++ b/2_SIRIUS_CSI.ipynb
@@ -17,23 +17,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Determination of memory status is not supported on this \n",
-      " platform, measuring for memoryleaks will never fail\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import glob\n",
-    "import sys\n",
-    "sys.path.insert(0, '/Users/eeko/openms-develop/openms_build/pyOpenMS')\n",
     "from pyopenms import *\n",
     "import shutil"
    ]
@@ -52,13 +41,11 @@
     "The algorithm generates formula predictions from scores calculated from 1) MS2 fragmentation scores (ppm error + intensity) and 2) MS1 isotopic pattern scores.\n",
     "\n",
     "\n",
-    "It can only compute feautures that are singly charged. There is also a compound timeout so that it doesn't compute for longer than 100 seconds per feature, which normally happens with larger molecules.\n",
+    "It can only compute feautures that are singly charged. There is also a compound timeout so that it doesn\"t compute for longer than 100 seconds per feature, which normally happens with larger molecules.\n",
     "        \n",
     ">-sirius:compound_timeout <number>                    \n",
     "\n",
-    ">Maximal computation time in seconds for a single compound. 0 for an infinite amount of time. (default: '100' min: '0')\n",
-    "\n",
-    "**Replace the executable path from iOS \"resources/Sirius/sirius.app/Contents/MacOS/sirius\" to Linux \"resources/Sirius/sirius/bin/sirius\"**\n",
+    ">Maximal computation time in seconds for a single compound. 0 for an infinite amount of time. (default: \"100\" min: \"0\")\n",
     "\n",
     "#### `2) CSI:FingerID`\n",
     "\n",
@@ -66,7 +53,7 @@
     "\n",
     "If you replace: \n",
     "    \n",
-    ">out_csifingerid = os.path.join(\"results\", \"\", \"interim\", \"\", \"CSI\", \"\", 'structures_' + os.path.basename(filename) +\".mzTab\")\n",
+    ">out_csifingerid = os.path.join(\"results\", \"\", \"interim\", \"\", \"CSI\", \"\", \"structures_\" + os.path.basename(filename) +\".mzTab\")\n",
     "\n",
     "with an empty string:\n",
     "\n",
@@ -74,9 +61,9 @@
     "        \n",
     "CSI:FingerID will be ignored and will not be computed.\n",
     "\n",
-    "###### Documentation: https://boecker-lab.github.io/docs.sirius.github.io/\n",
+    "###### Documentation: https:\"\"boecker-lab.github.io\"docs.sirius.github.io\"\n",
     "\n",
-    "###### Citation: Kai Dührkop, Huibin Shen, Marvin Meusel, Juho Rousu, and Sebastian Böcker, Searching molecular structure databases with tandem mass spectra using CSI:FingerID, PNAS October 13, 2015 112 (41) 12580-12585, https://doi.org/10.1073/pnas.1509788112"
+    "###### Citation: Kai Dührkop, Huibin Shen, Marvin Meusel, Juho Rousu, and Sebastian Böcker, Searching molecular structure databases with tandem mass spectra using CSI:FingerID, PNAS October 13, 2015 112 (41) 12580-12585, https:\"\"doi.org\"10.1073\"pnas.1509788112"
    ]
   },
   {
@@ -86,14 +73,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = os.path.join(\"results\", \"interim\", \"sirius\")\n",
+    "path = os.path.join(\"results\", \"interim\", \"Sirius\")\n",
     "try:\n",
     "    shutil.rmtree(path)\n",
     "    os.mkdir(path)\n",
     "except OSError:\n",
     "    os.mkdir(path)\n",
     "\n",
-    "feature_files = glob.glob('results/interim/preprocess/MFD_*.featureXML')\n",
+    "feature_files = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"Requantification\", \"MFD_*.featureXML\")))\n",
+    "input_mzml_files = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"Requantification\", \"MapAligned_*.mzML\")))\n",
     "\n",
     "feature_maps = []\n",
     "for file in feature_files:\n",
@@ -101,69 +89,78 @@
     "    FeatureXMLFile().load(file, fmap)\n",
     "    feature_maps.append(fmap)\n",
     "\n",
-    "for fm in feature_maps:\n",
-    "    fm_no_sub = FeatureMap(fm)\n",
-    "    fm_no_sub.clear(False)\n",
-    "    for f in fm:\n",
-    "        f.setConvexHulls([])\n",
-    "        f.setSubordinates([])\n",
-    "        fm_no_sub.push_back(f)\n",
+    "for filename in input_mzml_files:\n",
+    "    exp = MSExperiment()\n",
+    "    MzMLFile().load(filename, exp)\n",
+    "    exp.sortSpectra(True)\n",
+    "    print(exp.getNrSpectra())\n",
     "    \n",
-    "    sirius_algo = SiriusAdapterAlgorithm()\n",
-    "    sirius_algo_par = sirius_algo.getDefaults()\n",
-    "    sirius_algo_par.setValue(\"preprocessing:filter_by_num_masstraces\", 2) #Number of mass traces each feature has to have to be included\n",
-    "    sirius_algo_par.setValue(\"preprocessing:feature_only\", \"true\") #Uses the feature information from in_fm_no_sub to reduce the search space to MS2\n",
-    "    sirius_algo_par.setValue(\"sirius:profile\", \"orbitrap\")\n",
-    "    sirius_algo_par.setValue(\"sirius:db\", \"none\")\n",
-    "    sirius_algo_par.setValue(\"sirius:ions_considered\", \"[M+H]+, [M-H2O+H]+, [M+Na]+, [M+NH4]+\")\n",
-    "    sirius_algo_par.setValue(\"sirius:elements_enforced\", \"CHN[15]OS[4]\") \n",
-    "    sirius_algo_par.setValue(\"project:processors\", 2)\n",
-    "    sirius_algo_par.setValue(\"fingerid:db\", \"BIO\")\n",
-    "    sirius_algo.setParameters(sirius_algo_par)\n",
-    "        \n",
+    "    for fmap in feature_maps:\n",
+    "        if os.path.basename(fmap.getMetaValue(\"spectra_data\")[0].decode())[7:] == os.path.basename(filename)[11:]:\n",
+    "            fm_no_sub = FeatureMap(fmap)\n",
+    "            fm_no_sub.clear(False)\n",
+    "            for f in fmap:\n",
+    "                f.setConvexHulls([])\n",
+    "                f.setSubordinates([])\n",
+    "                fm_no_sub.push_back(f)\n",
+    "            \n",
+    "            featureinfo = os.path.join(path, 'MFD_ncv_' + os.path.basename(filename)[11:-5] + \".featureXML\")\n",
+    "            FeatureXMLFile().store(featureinfo, fm_no_sub)\n",
     "\n",
-    "    fm_info = FeatureMapping_FeatureMappingInfo()\n",
-    "    feature_mapping = FeatureMapping_FeatureToMs2Indices() \n",
-    "    sirius_algo.preprocessingSirius(fm_no_sub,\n",
-    "                                    exp,\n",
-    "                                    fm_info,\n",
-    "                                    feature_mapping)\n",
-    "    sirius_algo.logFeatureSpectraNumber(fm_no_sub, \n",
-    "                                        feature_mapping,\n",
-    "                                        exp)\n",
-    "    msfile = SiriusMSFile()\n",
-    "    debug_level = 3\n",
-    "    sirius_tmp = SiriusTemporaryFileSystemObjects(debug_level)\n",
-    "    siriusstring= String(sirius_tmp.getTmpMsFile())\n",
-    "    feature_only = sirius_algo.isFeatureOnly()\n",
-    "    isotope_pattern_iterations = sirius_algo.getIsotopePatternIterations()\n",
-    "    no_mt_info = sirius_algo.isNoMasstraceInfoIsotopePattern()\n",
-    "    compound_info = []\n",
-    "    msfile.store(exp,\n",
-    "                String(sirius_tmp.getTmpMsFile()),\n",
-    "                feature_mapping, \n",
-    "                feature_only,\n",
-    "                isotope_pattern_iterations, \n",
-    "                no_mt_info, \n",
-    "                compound_info)\n",
-    "    \n",
-    "    out_csifingerid = os.path.join(path, 'structures_' + os.path.basename(filename)[19:-5] +\".mzTab\")\n",
-    "    executable= \"resources/Sirius/sirius.app/Contents/MacOS/sirius\"\n",
-    "    subdirs = sirius_algo.callSiriusQProcess(String(sirius_tmp.getTmpMsFile()),\n",
-    "                                            String(sirius_tmp.getTmpOutDir()),\n",
-    "                                            String(executable),\n",
-    "                                            String(out_csifingerid),\n",
-    "                                            False)\n",
-    "    candidates = sirius_algo.getNumberOfSiriusCandidates()\n",
-    "    sirius_result = MzTab()\n",
-    "    siriusfile = MzTabFile()\n",
-    "    SiriusMzTabWriter.read(subdirs,\n",
-    "                        filename,\n",
-    "                        candidates,\n",
-    "                        sirius_result)\n",
-    "    \n",
-    "    sirius_file= os.path.join(path,'formulas_' + os.path.basename(filename)[7:-5] +\".mzTab\")\n",
-    "    siriusfile.store(sirius_file, sirius_result)"
+    "            sirius_algo = SiriusAdapterAlgorithm()\n",
+    "            sirius_algo_par = sirius_algo.getDefaults()\n",
+    "            sirius_algo_par.setValue(\"preprocessing:filter_by_num_masstraces\", 2) #Number of mass traces each feature has to have to be included\n",
+    "            sirius_algo_par.setValue(\"preprocessing:feature_only\", \"true\") #Uses the feature information from in_fm_no_sub to reduce the search space to MS2\n",
+    "            sirius_algo_par.setValue(\"sirius:profile\", \"orbitrap\")\n",
+    "            sirius_algo_par.setValue(\"sirius:db\", \"none\")\n",
+    "            sirius_algo_par.setValue(\"sirius:ions_considered\", \"[M+H]+, [M-H2O+H]+, [M+Na]+, [M+NH4]+\")\n",
+    "            sirius_algo_par.setValue(\"sirius:elements_enforced\", \"CHN[15]OS[4]Cl[2]P[2]\") \n",
+    "            sirius_algo_par.setValue(\"project:processors\", 2)\n",
+    "            sirius_algo_par.setValue(\"fingerid:db\", \"BIO\")\n",
+    "            sirius_algo.setParameters(sirius_algo_par)\n",
+    "                \n",
+    "            fm_info = FeatureMapping_FeatureMappingInfo()\n",
+    "            feature_mapping = FeatureMapping_FeatureToMs2Indices() \n",
+    "            sirius_algo.preprocessingSirius(featureinfo,\n",
+    "                                            exp,\n",
+    "                                            fm_info,\n",
+    "                                            feature_mapping)\n",
+    "            sirius_algo.logFeatureSpectraNumber(featureinfo, \n",
+    "                                                feature_mapping,\n",
+    "                                                exp)\n",
+    "            msfile = SiriusMSFile()\n",
+    "            debug_level = 3\n",
+    "            sirius_tmp = SiriusTemporaryFileSystemObjects(debug_level)\n",
+    "            siriusstring= String(sirius_tmp.getTmpMsFile())\n",
+    "            feature_only = sirius_algo.isFeatureOnly()\n",
+    "            isotope_pattern_iterations = sirius_algo.getIsotopePatternIterations()\n",
+    "            no_mt_info = sirius_algo.isNoMasstraceInfoIsotopePattern()\n",
+    "            compound_info = []\n",
+    "            msfile.store(exp,\n",
+    "                        String(sirius_tmp.getTmpMsFile()),\n",
+    "                        feature_mapping, \n",
+    "                        feature_only,\n",
+    "                        isotope_pattern_iterations, \n",
+    "                        no_mt_info, \n",
+    "                        compound_info)\n",
+    "\n",
+    "            out_csifingerid = os.path.join(path, \"structures_\" + os.path.basename(filename)[19:-5] +\".mzTab\")\n",
+    "            executable= os.path.join(\"resources\", \"Sirius\", \"sirius.app\", \"Contents\", \"MacOS\", \"sirius\")\n",
+    "            subdirs = sirius_algo.callSiriusQProcess(String(sirius_tmp.getTmpMsFile()),\n",
+    "                                                    String(sirius_tmp.getTmpOutDir()),\n",
+    "                                                    String(executable),\n",
+    "                                                    String(out_csifingerid),\n",
+    "                                                    False)\n",
+    "            candidates = sirius_algo.getNumberOfSiriusCandidates()\n",
+    "            sirius_result = MzTab()\n",
+    "            siriusfile = MzTabFile()\n",
+    "            SiriusMzTabWriter.read(subdirs,\n",
+    "                                filename,\n",
+    "                                candidates,\n",
+    "                                sirius_result)\n",
+    "\n",
+    "            sirius_file= os.path.join(path,\"formulas_\" + os.path.basename(filename)[7:-5] +\".mzTab\")\n",
+    "            siriusfile.store(sirius_file, sirius_result)"
    ]
   },
   {
@@ -191,7 +188,7 @@
    "metadata": {},
    "source": [
     "##### Explanation of columns for SIRIUS\n",
-    "###### - mz= mass-to-charge ratio (m/z)\n",
+    "###### - mz= mass-to-charge ratio (m\"z)\n",
     "###### - RT= retention time (sec)\n",
     "###### - intensity = intensity of the feature (AU-arbitrary units)\n",
     "###### - FWHM= Full Width of the peak at Half its Maximum height\n",
@@ -206,9 +203,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_SIRIUS_files = glob.glob('results/interim/sirius/formulas_*.mzTab')\n",
+    "input_SIRIUS_files = glob.glob(os.path.join(\"results\", \"interim\", \"Sirius\", \"formulas_*.mzTab\"))\n",
     "for filename in input_SIRIUS_files:\n",
-    "    sirius=  pyteomics.mztab.MzTab(filename, encoding='UTF8', table_format='df')\n",
+    "    sirius=  pyteomics.mztab.MzTab(filename, encoding=\"UTF8\", table_format=\"df\")\n",
     "    sirius.metadata\n",
     "    df= sirius.small_molecule_table\n",
     "    SIRIUS_DF= df.drop(columns= [\"identifier\", \"smiles\", \"inchi_key\", \"description\", \"calc_mass_to_charge\", \"charge\", \"taxid\", \"species\",\"database\", \"database_version\", \"spectra_ref\", \"search_engine\", \"modifications\"])\n",
@@ -230,9 +227,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_CSI_files = glob.glob('results/interim/sirius/structures_*.mzTab')\n",
+    "input_CSI_files = glob.glob(os.path.join(\"results\", \"interim\", \"Sirius\", \"structures_*.mzTab\"))\n",
     "for filename in input_CSI_files:\n",
-    "    CSI=  pyteomics.mztab.MzTab(filename, encoding='UTF8', table_format='df')\n",
+    "    CSI=  pyteomics.mztab.MzTab(filename, encoding=\"UTF8\", table_format=\"df\")\n",
     "    CSI.metadata\n",
     "    DF= CSI.small_molecule_table\n",
     "    DF= DF.drop(columns= [\"calc_mass_to_charge\", \"charge\", \"taxid\", \"species\",\"database\", \"database_version\", \"spectra_ref\", \"search_engine\", \"modifications\"])\n",
