--- a/1_Preprocessing.ipynb
+++ b/1_Preprocessing.ipynb
@@ -155,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = os.path.join(\"results\", \"interim\", \"preprocess\")\n",
+    "path = os.path.join(\"results\", \"interim\", \"Preprocessing\")\n",
     "try:\n",
     "    shutil.rmtree(path)\n",
     "    os.mkdir(path)\n",
@@ -240,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_feature_files = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"preprocess\", \"FFM_*.featureXML\")))\n",
+    "input_feature_files = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"Preprocessing\", \"FFM_*.featureXML\")))\n",
     "\n",
     "path = os.path.join(\"results\", \"features\")\n",
     "try:\n",
@@ -283,7 +283,7 @@
     "path = os.path.join(\"results\", \"interim\", \"mzML\")\n",
     "\n",
     "input_mzml_files = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"mzML\", \"PCpeak_*.mzML\")))\n",
-    "input_feature_files = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"preprocess\", \"FFM_*.featureXML\")))\n",
+    "input_feature_files = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"Preprocessing\", \"FFM_*.featureXML\")))\n",
     "\n",
     "for mzml in input_mzml_files:\n",
     "    exp = MSExperiment()\n",
@@ -318,9 +318,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = os.path.join(\"results\", \"interim\", \"preprocess\")\n",
+    "path = os.path.join(\"results\", \"interim\", \"Preprocessing\")\n",
     "\n",
-    "input_feature_files = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"preprocess\", \"FFM_*.featureXML\")))\n",
+    "input_feature_files = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"Preprocessing\", \"FFM_*.featureXML\")))\n",
     "feature_maps=[]\n",
     "for filename in input_feature_files:\n",
     "    feature_map_MFD = FeatureMap()\n",
@@ -419,7 +419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_feature_files = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"preprocess\", \"MapAligned_*.featureXML\")))\n",
+    "input_feature_files = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"Preprocessing\", \"MapAligned_*.featureXML\")))\n",
     "\n",
     "feature_maps = []\n",
     "for featurexml_file in input_feature_files:\n",
@@ -491,7 +491,7 @@
     "    \n",
     "# split ConsensusMap\n",
     "consensus_map = ConsensusMap()\n",
-    "ConsensusXMLFile().load(os.path.join(\"results\", \"interim\", \"preprocess\", \"consensus\" + \".consensusXML\"), consensus_map)\n",
+    "ConsensusXMLFile().load(os.path.join(\"results\", \"interim\", \"Preprocessing\", \"consensus\" + \".consensusXML\"), consensus_map)\n",
     "\n",
     "headers = consensus_map.getColumnHeaders()\n",
     "\n",
@@ -546,7 +546,7 @@
     "    os.mkdir(path)\n",
     "\n",
     "input_mzml_files = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"mzML\", \"PCfeature_*.mzML\")))\n",
-    "input_trafo = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"preprocess\", \"*.trafoXML\")))\n",
+    "input_trafo = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"Preprocessing\", \"*.trafoXML\")))\n",
     "\n",
     "for filename in input_mzml_files:\n",
     "    exp= MSExperiment()\n",
@@ -557,9 +557,9 @@
     "    for trafo_XML in input_trafo:\n",
     "        trafo=TransformationDescription()\n",
     "        TransformationXMLFile().load(trafo_XML, trafo, True)\n",
-    "        if os.path.basename(trafo_XML)[11:-9] == os.path.basename(filename)[7:-5]:\n",
+    "        if os.path.basename(trafo_XML)[11:-9] == os.path.basename(filename)[10:-5]:\n",
     "            transformer.transformRetentionTimes(exp, trafo, True)\n",
-    "            mzml_file = os.path.join(path, \"MapAligned_\" + os.path.basename(exp.getLoadedFilePath())[7:-5] +\".mzML\")\n",
+    "            mzml_file = os.path.join(path, \"MapAligned_\" + os.path.basename(exp.getLoadedFilePath())[10:-5] +\".mzML\")\n",
     "            MzMLFile().store(mzml_file, exp)"
    ]
   },
@@ -608,7 +608,6 @@
     "    if DF_features[\"Charge\"][ind] == \"3\":\n",
     "        DF_features.loc[ind, \"Charge\"]= \"+\" + DF_features.loc[ind,\"Charge\"]\n",
     "\n",
-    "import numpy as np\n",
     "DF_features[\"CompoundName\"] = np.arange(len(DF_features))\n",
     "DF_features[\"CompoundName\"] = \"feature_\" + DF_features[\"CompoundName\"].astype(str)\n",
     "DF_features[\"SumFormula\"] = \" \"\n",
@@ -673,7 +672,7 @@
     "    # run the FeatureFinderMetaboIdent with the metabo_table and store results in fm\n",
     "    metabo_table = metaboTableFromFile(os.path.join(path, \"MetaboliteIdentification.tsv\"))\n",
     "    ff.run(metabo_table, fm, String(mzml_file))\n",
-    "\n",
+    "    \n",
     "    # save FeatureMap to file\n",
     "    ff_file = os.path.join(path, \"FFMID_\" + os.path.basename(mzml_file)[11:-5] +\".featureXML\")\n",
     "    FeatureXMLFile().store(ff_file, fm)"
