--- a/2_SIRIUS_CSI.ipynb
+++ b/2_SIRIUS_CSI.ipynb
@@ -17,9 +17,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Determination of memory status is not supported on this \n",
+      " platform, measuring for memoryleaks will never fail\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import glob\n",
@@ -68,10 +77,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7e793c80",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4709\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Could not convert non-integer DataValue of type 'Empty' and value '' to unsigned int",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/2_SIRIUS_CSI.ipynb Cell 5'\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/2_SIRIUS_CSI.ipynb#ch0000004?line=46'>47</a>\u001b[0m fm_info \u001b[39m=\u001b[39m FeatureMapping_FeatureMappingInfo()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/2_SIRIUS_CSI.ipynb#ch0000004?line=47'>48</a>\u001b[0m feature_mapping \u001b[39m=\u001b[39m FeatureMapping_FeatureToMs2Indices() \n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/2_SIRIUS_CSI.ipynb#ch0000004?line=48'>49</a>\u001b[0m sirius_algo\u001b[39m.\u001b[39;49mpreprocessingSirius(featureinfo,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/2_SIRIUS_CSI.ipynb#ch0000004?line=49'>50</a>\u001b[0m                                 exp,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/2_SIRIUS_CSI.ipynb#ch0000004?line=50'>51</a>\u001b[0m                                 fm_info,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/2_SIRIUS_CSI.ipynb#ch0000004?line=51'>52</a>\u001b[0m                                 feature_mapping)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/2_SIRIUS_CSI.ipynb#ch0000004?line=52'>53</a>\u001b[0m sirius_algo\u001b[39m.\u001b[39mlogFeatureSpectraNumber(featureinfo, \n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/2_SIRIUS_CSI.ipynb#ch0000004?line=53'>54</a>\u001b[0m                                     feature_mapping,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/2_SIRIUS_CSI.ipynb#ch0000004?line=54'>55</a>\u001b[0m                                     exp)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/2_SIRIUS_CSI.ipynb#ch0000004?line=55'>56</a>\u001b[0m msfile \u001b[39m=\u001b[39m SiriusMSFile()\n",
+      "File \u001b[0;32mpyopenms/pyopenms_3.pyx:10168\u001b[0m, in \u001b[0;36mpyopenms.pyopenms_3.SiriusAdapterAlgorithm.preprocessingSirius\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Could not convert non-integer DataValue of type 'Empty' and value '' to unsigned int"
+     ]
+    }
+   ],
    "source": [
     "path = os.path.join(\"results\", \"interim\", \"Sirius\")\n",
     "try:\n",
@@ -173,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9f98622f",
    "metadata": {},
    "outputs": [],
@@ -198,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "8d863b60",
    "metadata": {},
    "outputs": [],
@@ -222,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "261217e8-39a3-4ae4-9e22-18b110645b13",
    "metadata": {},
    "outputs": [],
