preprocessing and requant

--- a/1_Preprocessing.ipynb
+++ b/1_Preprocessing.ipynb
@@ -468,11 +468,9 @@
    "id": "0420ca96",
    "metadata": {},
    "source": [
-    "### `Gap filling workflow`\n",
+    "### `Re-quantification`\n",
     "\n",
-    "- Split the ConsensusMap into features that have no missing values, and features that have at least one missing value; requantify only the missing values. \n",
-    "\n",
-    "Reconstruct FeatureMaps from complete ConsensusFeatures; these FeatureMaps will be later merged with the requantification results (FeatureFinderMetaboIdent FeatureMaps). This step is necessary for adduct annotation. - `do I really need this step?`"
+    "- Split the ConsensusMap into features that have no missing values, and features that have at least one missing value; requantify only the missing values. "
    ]
   },
   {
@@ -508,6 +506,14 @@
     "\n",
     "ConsensusXMLFile().store(os.path.join(path, \"consensus_complete\" + \".consensusXML\"), complete)\n",
     "ConsensusXMLFile().store(os.path.join(path, \"consensus_missing\" + \".consensusXML\"), missing)\n",
+    "\n",
+    "# get intensities as a DataFrame\n",
+    "result = missing.get_df()\n",
+    "result= result.reset_index()\n",
+    "result= result.drop(columns= [\"sequence\"])\n",
+    "# store as tsv file\n",
+    "result.to_csv(os.path.join(path, \"FeatureMatrixNaN.tsv\"), sep = \"\\t\", index = False)\n",
+    "result\n",
     "\n",
     "# reconstruct complete FeatureMaps\n",
     "consensus_map = ConsensusMap()\n",
@@ -582,7 +588,7 @@
    "outputs": [],
    "source": [
     "#Import the feature matrix tsv table and keep only the columns: RT, mz and charge\n",
-    "DF_features = pd.read_csv(\"results/features/FeatureMatrix.tsv\", sep=\"\\t\")\n",
+    "DF_features = pd.read_csv(os.path.join(path, \"FeatureMatrixNaN.tsv\"), sep=\"\\t\")\n",
     "DF_features = DF_features[[\"RT\",\"mz\", \"charge\"]]\n",
     "\n",
     "DF_features= DF_features.rename(columns={ \"charge\":\"Charge\", \"mz\": \"Mass\", \"RT\": \"RetentionTime\"})\n",
@@ -664,8 +670,8 @@
     "    ff.setMSData(spectra)\n",
     "\n",
     "    params = ff.getParameters()\n",
-    "    params[b\"extract:mz_window\"] = 5.0 \n",
-    "    params[b\"detect:peak_width\"] = 20.0  #adjust for wide peaks\n",
+    "    params[b\"extract:mz_window\"] = 10.0 \n",
+    "    params[b\"detect:peak_width\"] = 60.0  #adjust for wide peaks\n",
     "    ff.setParameters(params)\n",
     "    # FeatureMap to store results\n",
     "    fm = FeatureMap()\n",
@@ -683,9 +689,7 @@
    "id": "3aadcf67",
    "metadata": {},
    "source": [
-    "##### Merge complete FeatureMaps from FFM with requantified FeatureMaps from FFMID\n",
-    "\n",
-    "`But here we not only fill the gaps, but requantify the whole feature that has missing values`"
+    "##### Merge complete FeatureMaps from FFM with requantified FeatureMaps from FFMID"
    ]
   },
   {
