--- a/3_SIRIUS_CSI.ipynb
+++ b/3_SIRIUS_CSI.ipynb
@@ -77,27 +77,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "7e793c80",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4709\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "Could not convert non-integer DataValue of type 'Empty' and value '' to unsigned int",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32m/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/2_SIRIUS_CSI.ipynb Cell 5'\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/2_SIRIUS_CSI.ipynb#ch0000004?line=46'>47</a>\u001b[0m fm_info \u001b[39m=\u001b[39m FeatureMapping_FeatureMappingInfo()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/2_SIRIUS_CSI.ipynb#ch0000004?line=47'>48</a>\u001b[0m feature_mapping \u001b[39m=\u001b[39m FeatureMapping_FeatureToMs2Indices() \n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/2_SIRIUS_CSI.ipynb#ch0000004?line=48'>49</a>\u001b[0m sirius_algo\u001b[39m.\u001b[39;49mpreprocessingSirius(featureinfo,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/2_SIRIUS_CSI.ipynb#ch0000004?line=49'>50</a>\u001b[0m                                 exp,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/2_SIRIUS_CSI.ipynb#ch0000004?line=50'>51</a>\u001b[0m                                 fm_info,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/2_SIRIUS_CSI.ipynb#ch0000004?line=51'>52</a>\u001b[0m                                 feature_mapping)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/2_SIRIUS_CSI.ipynb#ch0000004?line=52'>53</a>\u001b[0m sirius_algo\u001b[39m.\u001b[39mlogFeatureSpectraNumber(featureinfo, \n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/2_SIRIUS_CSI.ipynb#ch0000004?line=53'>54</a>\u001b[0m                                     feature_mapping,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/2_SIRIUS_CSI.ipynb#ch0000004?line=54'>55</a>\u001b[0m                                     exp)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/2_SIRIUS_CSI.ipynb#ch0000004?line=55'>56</a>\u001b[0m msfile \u001b[39m=\u001b[39m SiriusMSFile()\n",
-      "File \u001b[0;32mpyopenms/pyopenms_3.pyx:10168\u001b[0m, in \u001b[0;36mpyopenms.pyopenms_3.SiriusAdapterAlgorithm.preprocessingSirius\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: Could not convert non-integer DataValue of type 'Empty' and value '' to unsigned int"
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/3_SIRIUS_CSI.ipynb Cell 5'\u001b[0m in \u001b[0;36m<cell line: 12>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/3_SIRIUS_CSI.ipynb#ch0000004?line=11'>12</a>\u001b[0m \u001b[39mfor\u001b[39;00m file \u001b[39min\u001b[39;00m feature_files:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/3_SIRIUS_CSI.ipynb#ch0000004?line=12'>13</a>\u001b[0m     fmap \u001b[39m=\u001b[39m FeatureMap()\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/3_SIRIUS_CSI.ipynb#ch0000004?line=13'>14</a>\u001b[0m     FeatureXMLFile()\u001b[39m.\u001b[39;49mload(file, fmap)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/3_SIRIUS_CSI.ipynb#ch0000004?line=14'>15</a>\u001b[0m     feature_maps\u001b[39m.\u001b[39mappend(fmap)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/3_SIRIUS_CSI.ipynb#ch0000004?line=16'>17</a>\u001b[0m \u001b[39mfor\u001b[39;00m filename \u001b[39min\u001b[39;00m input_mzml_files:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -174,7 +166,7 @@
     "                        compound_info)\n",
     "\n",
     "            out_csifingerid = os.path.join(path, \"structures_\" + os.path.basename(filename)[19:-5] +\".mzTab\")\n",
-    "            executable= os.path.join(\"resources\", \"Sirius\", \"sirius.app\", \"Contents\", \"MacOS\", \"sirius\")\n",
+    "            executable= shutil.which(\"sirius\")\n",
     "            subdirs = sirius_algo.callSiriusQProcess(String(sirius_tmp.getTmpMsFile()),\n",
     "                                                    String(sirius_tmp.getTmpOutDir()),\n",
     "                                                    String(executable),\n",
@@ -287,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4
  },
