--- a/1_FileConversion.ipynb
+++ b/1_FileConversion.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### - `Optional step: Convert Thermo files (*.raw):`\n",
+    "##### `Optional step: Convert Thermo files (*.raw):`\n",
     "\n",
     "ThermoRawFileParser https://github.com/compomics/ThermoRawFileParser\n",
     "\n",
