Axel's name and annotation corrections

--- a/5_Annotation.ipynb
+++ b/5_Annotation.ipynb
@@ -17,7 +17,11 @@
    "metadata": {},
    "source": [
     "#### `1) GNPS annotations`\n",
-    "Import all identifications from GNPS (from 100 files or so) and \"clean up\" the table"
+    "\n",
+    "This step requires an independent job at GNPS Spectral Library Search (input: raw mzML files)\n",
+    "See documentation: https://ccms-ucsd.github.io/GNPSDocumentation/librarysearch/ \n",
+    "\n",
+    "When the job is finished, import all identifications from GNPS, save the .TSV table under the resources directory and \"clean up\" the table:"
    ]
   },
   {
@@ -41,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FeatureMatrix= pd.read_csv(os.path.join(\"results\", \"features\", \"FeatureMatrix_Requantified.tsv\"), sep=\"\\t\")\n",
+    "FeatureMatrix= pd.read_csv(os.path.join(\"results\", \"features\", \"FeatureMatrix.tsv\"), sep=\"\\t\")\n",
     "FeatureMatrix"
    ]
   },
@@ -49,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Annotate the features detected by GNPS according to mz and RT (mz tolerance 10 ppm and RT tolerance 20 seconds)"
+    "Annotate the features detected by GNPS according to mz and RT (mz tolerance 10 ppm and RT tolerance 20 seconds: instrument and method-dependent)"
    ]
   },
   {
@@ -64,7 +68,7 @@
     "    hits = []\n",
     "    for name, GNPS_mz, GNPS_rt, in zip(GNPS[\"Compound_Name\"], GNPS[\"Precursor_MZ\"], GNPS[\"RetentionTime\"]):\n",
     "        mass_delta = (abs(GNPS_mz-mz)/GNPS_mz)*1000000.0 if GNPS_mz != 0 else np.nan\n",
-    "        if (GNPS_rt >= rt-30.0) & (GNPS_rt <= rt+30.0) & (mass_delta<= 20.0):\n",
+    "        if (GNPS_rt >= rt-20.0) & (GNPS_rt <= rt+20.0) & (mass_delta<= 10.0):\n",
     "            hit = f\"{name}\"\n",
     "            if hit not in hits:\n",
     "                hits.append(hit)\n",
@@ -118,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "df_formulas will contain likely duplicate formulas that could be either isomeric, isobaric compounds, or identical compounds (with identical RT and mz)"
+    "df_formulas will likely contain duplicate formulas that could be either isomeric, isobaric compounds, or identical compounds (with identical RT and mz). Here, we want to collapse the identical, repeating compounds"
    ]
   },
   {
@@ -161,12 +165,10 @@
     "        s= df_sirius.iloc[i]\n",
     "        new_df= new_df.append(s)\n",
     "    else:\n",
-    "        #print(index)\n",
     "        mz_0= df_sirius[\"mz\"][i]\n",
     "        mz_1= new_df[\"mz\"][index]\n",
     "        time_0= df_sirius[\"RT\"][i]\n",
     "        time_1= new_df[\"RT\"][index]\n",
-    "        #(print(mz_0, time_0, mz_1, time_1))\n",
     "        mass_delta = (abs(mz_0 - mz_1)/mz_0)*1000000\n",
     "        maxdeltaRT = time_0 + 30.0\n",
     "        mindeltaRT = time_0 - 30.0\n",
@@ -259,7 +261,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Annotate the formulas and structural predictions to the feature matrix according to SIRIUS and CSI:"
+    "Annotate the formulas and structural predictions to the feature matrix according to SIRIUS and CSI (you can also only choose the feature matrix with unknown features generated above):"
    ]
   },
   {
@@ -268,7 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DF_features= pd.read_csv(os.path.join(\"results\", \"features\", \"FeatureMatrix_Requantified.tsv\"), sep=\"\\t\")\n",
+    "DF_features= pd.read_csv(os.path.join(\"results\", \"features\", \"FeatureMatrix.tsv\"), sep=\"\\t\")\n",
     "DF_features"
    ]
   },
