unique IDs, plot, metadata

--- a/2_Preprocessing_requant.ipynb
+++ b/2_Preprocessing_requant.ipynb
@@ -32,7 +32,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from pyopenms import *\n",
-    "import shutil"
+    "import shutil\n",
+    "import plotly.express as px"
    ]
   },
   {
@@ -148,7 +149,6 @@
     "for filename in input_mzml_files:\n",
     "    exp = MSExperiment()\n",
     "    MzMLFile().load(filename, exp)\n",
-    "    exp.sortSpectra(True)\n",
     "    mass_traces = []\n",
     "    mtd = MassTraceDetection()\n",
     "    mtd_par = mtd.getDefaults()\n",
@@ -180,7 +180,6 @@
     "    ffm_par = ffm.getDefaults() \n",
     "    ffm_par.setValue(\"isotope_filtering_model\", \"none\")\n",
     "    ffm_par.setValue(\"remove_single_traces\", \"true\")\n",
-    "    ffm_par.setValue(\"mz_scoring_by_elements\", \"false\")\n",
     "    ffm_par.setValue(\"report_convex_hulls\", \"true\")\n",
     "    ffm.setParameters(ffm_par)\n",
     "    ffm.run(mass_traces_final, feature_map_FFM, feat_chrom)\n",
@@ -188,17 +187,7 @@
     "    feature_map_FFM.setUniqueIds()\n",
     "    feature_map_FFM.setPrimaryMSRunPath([filename.encode()])  \n",
     "\n",
-    "    feature_map_filtered = FeatureMap(feature_map_FFM)\n",
-    "    feature_map_filtered.clear(False)\n",
-    "\n",
-    "    for f in feature_map_FFM:\n",
-    "        if f.getOverallQuality() > 0.0005:\n",
-    "            feature_map_filtered.push_back(f)\n",
-    "\n",
-    "    feature_map_FFM = feature_map_filtered\n",
-    "\n",
     "    feature_maps_FFM.append(feature_map_FFM)\n",
-    "\n",
     "    featurefile = os.path.join(path, \"FFM_\" + os.path.basename(filename)[7:-5] +\".featureXML\")\n",
     "    FeatureXMLFile().store(featurefile, feature_map_FFM)"
    ]
@@ -218,7 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_feature_files = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"Preprocessing\", \"FFM_*.featureXML\")))\n",
+    "input_feature_files = glob.glob(os.path.join(\"results\", \"interim\", \"Preprocessing\", \"FFM_*.featureXML\"))\n",
     "\n",
     "path = os.path.join(\"results\", \"features\")\n",
     "try:\n",
@@ -260,13 +249,12 @@
    "source": [
     "path = os.path.join(\"results\", \"interim\", \"mzML\")\n",
     "\n",
-    "input_mzml_files = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"mzML\", \"PCpeak_*.mzML\")))\n",
-    "input_feature_files = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"Preprocessing\", \"FFM_*.featureXML\")))\n",
+    "input_mzml_files = glob.glob(os.path.join(\"results\", \"interim\", \"mzML\", \"PCpeak_*.mzML\"))\n",
+    "input_feature_files = glob.glob(os.path.join(\"results\", \"interim\", \"Preprocessing\", \"FFM_*.featureXML\"))\n",
     "\n",
     "for mzml in input_mzml_files:\n",
     "    exp = MSExperiment()\n",
     "    MzMLFile().load(mzml, exp)\n",
-    "    exp.sortSpectra(True)\n",
     "    correct = PrecursorCorrection()\n",
     "\n",
     "    for filename in input_feature_files:\n",
@@ -298,7 +286,7 @@
    "source": [
     "path = os.path.join(\"results\", \"interim\", \"Preprocessing\")\n",
     "\n",
-    "input_feature_files = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"Preprocessing\", \"FFM_*.featureXML\")))\n",
+    "input_feature_files = glob.glob(os.path.join(\"results\", \"interim\", \"Preprocessing\", \"FFM_*.featureXML\"))\n",
     "feature_maps=[]\n",
     "for filename in input_feature_files:\n",
     "    feature_map_MFD = FeatureMap()\n",
@@ -374,7 +362,6 @@
     "                alpha = np.asarray([f.getIntensity() for f in fm])/max([f.getIntensity() for f in fm]))\n",
     "\n",
     "fig.tight_layout()\n",
-    "#fig.legend([fmap.getDataProcessing()[0].getMetaValue(\"parameter: out\")[:-11] for fmap in feature_maps], loc = \"lower center\")\n",
     "fig.show()"
    ]
   },
@@ -397,7 +384,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_feature_files = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"Preprocessing\", \"MapAligned_*.featureXML\")))\n",
+    "input_feature_files = glob.glob(os.path.join(\"results\", \"interim\", \"Preprocessing\", \"MapAligned_*.featureXML\"))\n",
     "\n",
     "feature_maps = []\n",
     "for featurexml_file in input_feature_files:\n",
@@ -425,20 +412,37 @@
     "    file_descriptions[i] = file_description\n",
     "\n",
     "feature_grouper.group(feature_maps, consensus_map)\n",
+    "consensus_map.setUniqueIds()\n",
     "consensus_map.setColumnHeaders(file_descriptions)\n",
-    "\n",
     "\n",
     "Consensus_file= os.path.join(path, \"consensus\" + \".consensusXML\")\n",
     "ConsensusXMLFile().store(Consensus_file, consensus_map)\n",
-    "\n",
     "\n",
     "# get intensities as a DataFrame\n",
     "result = consensus_map.get_df()\n",
     "result= result.reset_index()\n",
     "result= result.drop(columns= [\"sequence\"])\n",
-    "# store as tsv file\n",
-    "result.to_csv(os.path.join(\"results\", \"features\", \"FeatureMatrix.tsv\"), sep = \"\\t\", index = False)\n",
     "result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "214dcf8f",
+   "metadata": {},
+   "source": [
+    "Plot:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c86e6f42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.scatter(result[result[\"quality\"] > 0.01], x=\"RT\", y=\"mz\", color=\"quality\")\n",
+    "fig.update_layout(title=\"Consensus features\")\n",
+    "fig.show()"
    ]
   },
   {
@@ -835,6 +839,7 @@
     "    file_descriptions[i] = file_description\n",
     "\n",
     "feature_grouper.group(feature_maps, consensus_map)\n",
+    "consensus_map.setUniqueIds()\n",
     "consensus_map.setColumnHeaders(file_descriptions)\n",
     "\n",
     "\n",
@@ -871,7 +876,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
