--- a/4_GNPSExport.ipynb
+++ b/4_GNPSExport.ipynb
@@ -54,42 +54,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!(cd results/interim/mzML/ && ls PCfeature_*.mzML > filelist.txt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "path= os.path.join(\"results\", \"GNPSexport\")\n",
     "isExist= os.path.exists(path)\n",
     "if not isExist:\n",
     "    os.mkdir(path)\n",
     "\n",
-    "import pandas as pd\n",
-    "header_list = [\"filename\"]\n",
-    "df=pd.read_csv(os.path.join(\"results\", \"interim\", \"mzML\", \"filelist.txt\"), names=header_list, index_col= None)\n",
-    "df['ATTRIBUTE_MAPID'] = np.arange(len(df))\n",
-    "df[\"ATTRIBUTE_MAPID\"]= \"MAP\" + df[\"ATTRIBUTE_MAPID\"].astype(str)\n",
-    "df['ATTRIBUTE_genomeID']=df['filename'].str.extract(r'(NBC_?\\d*)')\n",
-    "df['ATTRIBUTE_genomeIDMDNA']=df['filename'].str.extract(r'(MDNAWGS?\\d*|MDNA_WGS_?\\d*)')\n",
-    "df['ATTRIBUTE_genomeID']=df['ATTRIBUTE_genomeID'].fillna(df['ATTRIBUTE_genomeIDMDNA'])\n",
-    "df[\"ATTRIBUTE_media\"]= df['filename'].str.extract(r'(ISP2|DNPM|FPY12|MA|soyM\\d*)')\n",
-    "df[\"ATTRIBUTE_comment\"]= df['ATTRIBUTE_genomeID'].astype(str) +\"_\" + df[\"ATTRIBUTE_media\"].astype(str)\n",
-    "df=df.drop(columns=\"ATTRIBUTE_genomeIDMDNA\")\n",
-    "df.to_csv(os.path.join(path, \"metadata.tsv\"), sep='\\t')\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!(cd results/interim/mzML && rm filelist.txt)"
+    "# Create a metadata table from the list of mzML files \n",
+    "\n",
+    "metadata = pd.DataFrame()\n",
+    "metadata[\"filename\"] = [file for file in os.listdir(\"Example_data\") if file.endswith(\".mzML\")]\n",
+    "metadata[\"ATTRIBUTE_MAPID\"]= [\"MAP\" + str(i) for i in range(len(metadata))]\n",
+    "metadata['ATTRIBUTE_genomeID']=metadata['filename'].str.extract(r'(NBC_?\\d*)')\n",
+    "metadata['ATTRIBUTE_genomeIDMDNA']=metadata['filename'].str.extract(r'(MDNAWGS?\\d*|MDNA_WGS_?\\d*)')\n",
+    "metadata['ATTRIBUTE_genomeID']=metadata['ATTRIBUTE_genomeID'].fillna(metadata['ATTRIBUTE_genomeIDMDNA'])\n",
+    "metadata[\"ATTRIBUTE_media\"]= metadata['filename'].str.extract(r'(ISP2|DNPM|FPY12|MA|soyM\\d*)')\n",
+    "metadata[\"ATTRIBUTE_comment\"]= metadata['ATTRIBUTE_genomeID'].astype(str) +\"_\" + metadata[\"ATTRIBUTE_media\"].astype(str)\n",
+    "metadata=metadata.drop(columns=\"ATTRIBUTE_genomeIDMDNA\")\n",
+    "metadata.to_csv(os.path.join(path, \"metadata.tsv\"), sep='\\t')\n",
+    "metadata"
    ]
   },
   {
